# autoresearch

./: README.md  analysis.ipynb  optimize.py  prepare.py  program.md  pyproject.toml
