[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous inference-latency research swarm for Qwen3.5-0.8B"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0",
    "huggingface_hub>=0.26",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "protobuf",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "sentencepiece",
    "torch==2.9.1",
    "transformers>=4.46",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
